--- a/MusicPlayer/vue-music/package.json
+++ b/MusicPlayer/vue-music/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "vue-lazyload": "^1.0.3",
     "axios": "^0.16.2",
     "babel-runtime": "^6.26.0",
     "better-scroll": "^0.1.15",
